fix aside position on mobile

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -74,6 +74,10 @@
         line-height: 18px;
     }
 
+    aside {
+        padding: 50px;
+    }
+
     aside ul li button img {
         max-width: 50px;
     }
